--- a/locations/tamilnadu/abacus-franchise-in-ooty.html
+++ b/locations/tamilnadu/abacus-franchise-in-ooty.html
@@ -231,10 +231,10 @@
                         <ul
                             class="navbar-nav justify-content-start align-items-start align-items-md-start align-items-lg-center flex-grow-1 gap-2 gap-md-2 gap-lg-5">
                             <li class="nav-item">
-                                <a class="nav-link" href="https://www.playabacusindia.com/index.html">Home</a>
+                                <a class="nav-link" href="../../index.html">Home</a>
                             </li><span class="nav-line"></span>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://www.playabacusindia.com/about-us.html">About US</a>
+                                <a class="nav-link" href="../../about-us.html">About US</a>
                             </li><span class="nav-line"></span>
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle drop-box" type="button" data-bs-toggle="dropdown"
@@ -242,35 +242,35 @@
                                     Our Courses
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="https://www.playabacusindia.com/our-courses/abacus.html">Abacus</a>
+                                    <li><a class="dropdown-item" href="../../our-courses/abacus.html">Abacus</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="https://www.playabacusindia.com/our-courses/speed-arithmetic.html">Vedic
+                                    <li><a class="dropdown-item" href="../../our-courses/speed-arithmetic.html">Vedic
                                             Mathematics</a></li>
-                                    <li><a class="dropdown-item" href="https://www.playabacusindia.com/our-courses/arka-kids.html">Arka
+                                    <li><a class="dropdown-item" href="../../our-courses/arka-kids.html">Arka
                                             Kids</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="https://www.playabacusindia.com/our-courses/creative-arts-india.html">Creative
+                                    <li><a class="dropdown-item" href="../../our-courses/creative-arts-india.html">Creative
                                             Art India</a></li>
-                                    <li><a class="dropdown-item" href="https://www.playabacusindia.com/our-courses/phonics-star.html">Phonics Star</a>
+                                    <li><a class="dropdown-item" href="../../our-courses/phonics-star.html">Phonics Star</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="https://www.playabacusindia.com/our-courses/handwriting.html">Handwriting</a>
+                                    <li><a class="dropdown-item" href="../../our-courses/handwriting.html">Handwriting</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="https://www.playabacusindia.com/our-courses/brite-english.html">Brite
+                                    <li><a class="dropdown-item" href="../../our-courses/brite-english.html">Brite
                                             English</a></li>
-                                    <li><a class="dropdown-item" href="https://www.playabacusindia.com/our-courses/brain-tree.html">Brain
+                                    <li><a class="dropdown-item" href="../../our-courses/brain-tree.html">Brain
                                             Tree</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="https://www.playabacusindia.com/our-courses/my-math.html">My Math</a>
+                                    <li><a class="dropdown-item" href="../../our-courses/my-math.html">My Math</a>
                                     </li>
 
                                 </ul>
                             </div>
                             <span class="nav-line"></span>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://www.playabacusindia.com/gallery.html">Gallery</a>
+                                <a class="nav-link" href="../../gallery.html">Gallery</a>
                             </li><span class="nav-line"></span>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://www.playabacusindia.com/contact-us.html">Contact
+                                <a class="nav-link" href="../../contact-us.html">Contact
                                     US</a>
                             </li>
                         </ul>
@@ -1227,17 +1227,17 @@
                     <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon mt-2"
                         id="footer-social-section">
                         <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
-                                src="../../images/socialicons/facebook.svg" alt="Facebook" loading="lazy"></a>
+                                src="../../images/socialicons/facebook.svg" alt="Facebook" width="30" height="30" loading="lazy"></a>
                         <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
-                                src="../../images/socialicons/instagram.svg" alt="Instagram" loading="lazy"></a>
+                                src="../../images/socialicons/instagram.svg" alt="Instagram" width="30" height="30" loading="lazy"></a>
                         <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="../../images/socialicons/x-white.svg"
-                                alt="X" loading="lazy"></a>
+                                alt="X" width="30" height="30" loading="lazy"></a>
                         <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." title="WhatsApp"><img
-                                src="../../images/socialicons/whatsapp.svg" alt="WhatsApp" loading="lazy"></a>
+                                src="../../images/socialicons/whatsapp.svg" alt="WhatsApp" width="30" height="30" loading="lazy"></a>
                         <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><img
-                                src="../../images/socialicons/youtube.svg" alt="YouTube" loading="lazy"></a>
+                                src="../../images/socialicons/youtube.svg" alt="YouTube" width="30" height="30" loading="lazy"></a>
                         <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" title="LinkedIn"><img
-                                src="../../images/socialicons/linkedin.svg" alt="LinkedIn" loading="lazy"></a>
+                                src="../../images/socialicons/linkedin.svg" alt="LinkedIn" width="30" height="30" loading="lazy"></a>
                     </div>
                 </div>
             </div>
@@ -1323,7 +1323,7 @@
                         <div class="mb-3">
                             <div class="input-group">
                                 <span class="input-group-text bg-light border-end-0">
-                                    <img src="https://flagcdn.com/w20/in.png" alt="India" class="flag-icon-sm">
+                                    <img src="https://flagcdn.com/w20/in.png" alt="India" class="flag-icon-sm" width="20" height="15" loading="lazy">
                                     <span class="ms-1 small">+91</span>
                                 </span>
                                 <input id="modal-phone" class="form-control border-start-0 ps-0"
@@ -1347,7 +1347,7 @@
 
     <!-- Back to Top Button -->
     <button id="backToTop" class="back-to-top" title="Go to top">
-        <i class="bi bi-arrow-up"></i>
+        <i class="fa-solid fa-arrow-up"></i>
     </button>
 
 </body>
