--- a/gallery.html
+++ b/gallery.html
@@ -184,16 +184,20 @@
                     <!-- Left: Socials & Email -->
                     <div class="col-lg-6 d-none d-lg-flex align-items-center gap-3">
                         <div class="social-icon d-flex gap-2">
-                            <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><i
+                            <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" target="_blank"
+                                rel="noopener noreferrer" title="Facebook"><i
                                     class="fa-brands fa-facebook-f text-white small"></i></a>
-                            <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><i
+                            <a href="https://www.instagram.com/ideal_play_abacus_india/" target="_blank"
+                                rel="noopener noreferrer" title="Instagram"><i
                                     class="fa-brands fa-instagram text-white small"></i></a>
-                            <a href="https://x.com/PlayAbacus" title="X (Twitter)"><i
-                                    class="fa-brands fa-x-twitter text-white small"></i></a>
-                            <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><i
+                            <a href="https://x.com/PlayAbacus" target="_blank" rel="noopener noreferrer"
+                                title="X (Twitter)"><i class="fa-brands fa-x-twitter text-white small"></i></a>
+                            <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" target="_blank"
+                                rel="noopener noreferrer" title="YouTube"><i
                                     class="fa-brands fa-youtube text-white small"></i></a>
-                            <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"
-                                title="LinkedIn"><i class="fa-brands fa-linkedin-in text-white small"></i></a>
+                            <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" target="_blank"
+                                rel="noopener noreferrer" title="LinkedIn"><i
+                                    class="fa-brands fa-linkedin-in text-white small"></i></a>
                         </div>
                         <span class="text-white-50">|</span>
                         <a href="mailto:contact@playabacusindia.com" class="text-white small text-decoration-none">
@@ -214,7 +218,8 @@
                                 class="d-none d-lg-inline-block text-white small fw-bold text-decoration-none">
                                 <i class="fa-solid fa-phone me-1"></i> +91 99404 16989
                             </a>
-                            <a href="https://idealplayabacusindia.com/FranchiseeLogin/login.asp"
+                            <a href="https://idealplayabacusindia.com/FranchiseeLogin/login.asp" target="_blank"
+                                rel="noopener noreferrer"
                                 class="badge rounded-pill bg-primary text-white text-decoration-none px-3 py-2">
                                 <i class="fa-solid fa-user-lock me-1"></i> Franchise Login
                             </a>
@@ -230,7 +235,7 @@
                 <!-- Brand Logo -->
                 <a class="navbar-brand me-4" href="index.html">
                     <img src="https://www.playabacusindia.com/images/logo.jpg"
-                        alt="Ideal Play Abacus India - Best Abacus Training" class="logo-brand">
+                        alt="Ideal Play Abacus India - Best Abacus Training" class="logo-brand" width="150" height="50">
                 </a>
 
                 <!-- Mobile Toggler -->
@@ -243,13 +248,14 @@
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header border-bottom">
-                        <img src="images/brandslogo/1.png" alt="IPA Abacus Brand Logo" class="brand-logo-small">
+                        <img src="images/brandslogo/1.png" alt="IPA Abacus Brand Logo" class="brand-logo-small"
+                            width="120" height="40">
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-xl-center flex-grow-1 pe-3 gap-0 gap-xl-3 fw-semibold">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about-us.html">About Us</a>
@@ -281,8 +287,8 @@
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
+                                <a class="nav-link dropdown-toggle active" aria-current="page" href="#" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     Pages <i class="fa-solid fa-chevron-down"></i>
                                 </a>
                                 <ul class="dropdown-menu border-0 shadow-lg animate slideIn rounded-3 mt-2">
@@ -298,6 +304,36 @@
                             </li>
                         </ul>
 
+                        <!-- Divider -->
+                        <hr class="d-xl-none my-3 opacity-25">
+
+                        <!-- Mobile Contact Info -->
+                        <div class="d-xl-none">
+                            <h6 class="text-muted fw-bold small text-uppercase mb-3 px-2 ls-1">
+                                Contact Us</h6>
+                            <div class="d-flex flex-column gap-3 px-2">
+                                <a href="tel:919940416989"
+                                    class="text-dark d-flex align-items-center gap-3 text-decoration-none hover-lift">
+                                    <div
+                                        class="icon-box-sm bg-light rounded-circle d-flex justify-content-center align-items-center">
+                                        <i class="fa-solid fa-phone text-secondary fs-6"></i>
+                                    </div>
+                                    <span class="fw-semibold">+91 99404 16989</span>
+                                </a>
+                                <a href="mailto:contact@playabacusindia.com"
+                                    class="text-dark d-flex align-items-center gap-3 text-decoration-none hover-lift">
+                                    <div
+                                        class="icon-box-sm bg-light rounded-circle d-flex justify-content-center align-items-center">
+                                        <i class="fa-solid fa-envelope text-secondary fs-6"></i>
+                                    </div>
+                                    <span class="fw-semibold">contact@playabacusindia.com</span>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!-- Divider -->
+                        <hr class="d-xl-none my-4 opacity-25">
+
                         <!-- Desktop CTA -->
                         <div class="d-none d-xl-flex align-items-center">
                             <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
@@ -307,36 +343,42 @@
                         </div>
 
                         <!-- Mobile Only Footer in Menu -->
-                        <div class="d-xl-none mt-4">
-                            <a href="https://idealplayabacusindia.com/FranchiseeLogin/login.asp"
-                                class="btn btn-warning w-100 rounded-pill mb-2 fw-bold text-dark shadow-sm">
+                        <div class="d-xl-none">
+                            <a href="https://idealplayabacusindia.com/FranchiseeLogin/login.asp" target="_blank"
+                                rel="noopener noreferrer"
+                                class="btn btn-warning w-100 rounded-pill mb-2 fw-bold text-dark shadow-sm py-2">
                                 <i class="fa-solid fa-user-lock me-2"></i> Franchise Login
                             </a>
                             <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
-                                class="btn btn-primary w-100 rounded-pill mb-3">Enquire Now</a>
-                            <div class="d-flex justify-content-center gap-3 fs-4 mt-3 flex-wrap">
-                                <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" class="text-secondary"><i
-                                        class="fa-brands fa-facebook"></i></a>
-                                <a href="https://www.instagram.com/ideal_play_abacus_india/" class="text-secondary"><i
-                                        class="fa-brands fa-instagram"></i></a>
-                                <a href="https://x.com/PlayAbacus" class="text-secondary"><i
-                                        class="fa-brands fa-x-twitter"></i></a>
-                                <a href="https://wa.me/919940416989" class="text-secondary"><i
-                                        class="fa-brands fa-whatsapp"></i></a>
+                                class="btn btn-primary w-100 rounded-pill py-2">Enquire Now</a>
+
+                            <!-- Divider -->
+                            <hr class="my-4 opacity-25">
+
+                            <h6 class="text-center text-muted fw-bold small text-uppercase mb-3 ls-1">Follow Us</h6>
+                            <div class="d-flex justify-content-center gap-3 fs-4 flex-wrap">
+                                <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" target="_blank"
+                                    rel="noopener noreferrer" class="hover-lift"><i
+                                        class="fa-brands fa-facebook text-primary"></i></a>
+                                <a href="https://www.instagram.com/ideal_play_abacus_india/" target="_blank"
+                                    rel="noopener noreferrer" class="hover-lift"><i
+                                        class="fa-brands fa-instagram text-danger"></i></a>
+                                <a href="https://x.com/PlayAbacus" target="_blank" rel="noopener noreferrer"
+                                    class="hover-lift"><i class="fa-brands fa-x-twitter text-dark"></i></a>
+                                <a href="https://wa.me/919940416989" target="_blank" rel="noopener noreferrer"
+                                    class="hover-lift"><i class="fa-brands fa-whatsapp text-success"></i></a>
                                 <a target="_blank" rel="noopener noreferrer"
                                     href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ"
-                                    class="text-secondary"><i class="fa-brands fa-youtube"></i></a>
+                                    class="hover-lift"><i class="fa-brands fa-youtube text-danger"></i></a>
                                 <a target="_blank" rel="noopener noreferrer"
                                     href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"
-                                    class="text-secondary"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    class="hover-lift"><i class="fa-brands fa-linkedin-in text-primary"></i></a>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
         </nav>
-
 
     </header>
     <main style="overflow:hidden" class="w-100">
@@ -679,7 +721,7 @@
                     <div class="d-flex align-items-start w-100 flex-column gap-3">
                         <a href="https://maps.app.goo.gl/2zDLx1TKKpa7nPZQ6" class="fot-a align-items-start lh-base">
                             <i class="bi bi-geo-alt-fill mt-1"></i>
-                            <span>No.14, Thiruvika 3rd Street, Royapettah high road, Mylapore, Chennai - 600 004, Tamil
+                            <span>No.14, Thiruvika 3rd Street, Royapettah high road, Myapore, Chennai - 600 004, Tamil
                                 Nadu, India.</span>
                         </a>
                         <a href="tel:919940416989" class="fot-a">
@@ -691,18 +733,24 @@
                     </div>
                     <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon mt-2"
                         id="footer-social-section">
-                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
-                                src="images/socialicons/facebook.svg" alt="Facebook" loading="lazy"></a>
-                        <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
-                                src="images/socialicons/instagram.svg" alt="Instagram" loading="lazy"></a>
-                        <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="images/socialicons/x-white.svg"
-                                alt="X" loading="lazy"></a>
-                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." title="WhatsApp"><img
-                                src="images/socialicons/whatsapp.svg" alt="WhatsApp" loading="lazy"></a>
-                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><img
-                                src="images/socialicons/youtube.svg" alt="YouTube" loading="lazy"></a>
-                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" title="LinkedIn"><img
-                                src="images/socialicons/linkedin.svg" alt="LinkedIn" loading="lazy"></a>
+                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" target="_blank"
+                            rel="noopener noreferrer" title="Facebook"><img src="images/socialicons/facebook.svg"
+                                alt="Facebook" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.instagram.com/ideal_play_abacus_india/" target="_blank"
+                            rel="noopener noreferrer" title="Instagram"><img src="images/socialicons/instagram.svg"
+                                alt="Instagram" loading="lazy" width="30" height="30"></a>
+                        <a href="https://x.com/PlayAbacus" target="_blank" rel="noopener noreferrer"
+                            title="X (Twitter)"><img src="images/socialicons/x-white.svg" alt="X" loading="lazy"
+                                width="30" height="30"></a>
+                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." target="_blank"
+                            rel="noopener noreferrer" title="WhatsApp"><img src="images/socialicons/whatsapp.svg"
+                                alt="WhatsApp" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" target="_blank"
+                            rel="noopener noreferrer" title="YouTube"><img src="images/socialicons/youtube.svg"
+                                alt="YouTube" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" target="_blank"
+                            rel="noopener noreferrer" title="LinkedIn"><img src="images/socialicons/linkedin.svg"
+                                alt="LinkedIn" loading="lazy" width="30" height="30"></a>
                     </div>
                 </div>
             </div>
@@ -736,7 +784,6 @@
             </div>
         </div>
     </footer>
-
 
     <!-- Bootstrap -->
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
@@ -788,7 +835,8 @@
                         <div class="mb-3">
                             <div class="input-group">
                                 <span class="input-group-text bg-light border-end-0">
-                                    <img src="https://flagcdn.com/w20/in.png" alt="India" class="flag-icon-sm">
+                                    <img src="https://flagcdn.com/w20/in.png" alt="India" class="flag-icon-sm"
+                                        width="20" height="15" loading="lazy">
                                     <span class="ms-1 small">+91</span>
                                 </span>
                                 <input id="modal-phone" class="form-control border-start-0 ps-0"
@@ -812,13 +860,9 @@
 
     <!-- Back to Top Button -->
     <button id="backToTop" class="back-to-top" title="Go to top">
-        <i class="bi bi-arrow-up"></i>
+        <i class="fa-solid fa-arrow-up"></i>
     </button>
 
 </body>
 
 </html>
-
-
-
-
