--- a/our-branches/abacus-in-india.html
+++ b/our-branches/abacus-in-india.html
@@ -135,14 +135,14 @@
             src="https://www.facebook.com/tr?id=4105191913057058&ev=PageView&noscript=1" /></noscript>
     <!-- End Meta Pixel Code -->
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17517142887"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17517142887"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'AW-17517142887');
-</script>
+        gtag('config', 'AW-17517142887');
+    </script>
 
 </head>
 
@@ -220,7 +220,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-xl-center flex-grow-1 pe-3 gap-0 gap-xl-3 fw-semibold">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                                <a class="nav-link" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../about-us.html">About Us</a>
@@ -239,15 +239,18 @@
                                             Kids</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/creative-arts-india.html">Creative Art India</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/phonics-star.html">Phonics
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/phonics-star.html">Phonics
                                             Star</a></li>
                                     <li><a class="dropdown-item px-3 py-1"
                                             href="../our-courses/handwriting.html">Handwriting</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/brite-english.html">Brite
+                                    <li><a class="dropdown-item px-3 py-1"
+                                            href="../our-courses/brite-english.html">Brite
                                             English</a></li>
                                     <li><a class="dropdown-item px-3 py-1" href="../our-courses/brain-tree.html">Brain
                                             Tree</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My Math</a>
+                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My
+                                            Math</a>
                                     </li>
                                 </ul>
                             </li>
@@ -359,7 +362,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
+                        <div
+                            class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
                             <div class="d-flex justify-content-center align-items-center info-box-icon">
                                 <i class="fa-solid fa-graduation-cap"></i>
                             </div>
@@ -370,7 +374,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
+                        <div
+                            class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
                             <div class="d-flex justify-content-center align-items-center info-box-icon">
                                 <i class="fa-solid fa-trophy"></i>
                             </div>
@@ -381,7 +386,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-start justify-content-md-start justify-content-lg-end align-items-center w-100 info-box-new gap-3">
+                        <div
+                            class="d-flex justify-content-start justify-content-md-start justify-content-lg-end align-items-center w-100 info-box-new gap-3">
                             <div class="d-flex justify-content-center align-items-center info-box-icon">
                                 <i class="fa-solid fa-gem"></i>
                             </div>
@@ -624,8 +630,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div style="--why-icon-box-clr: #2d97eb;"
                             class="d-flex justify-content-start align-items-center w-100 h-100 why-box flex-column text-center">
-                            <div 
-                                class="d-flex justify-content-center align-items-center why-box-icon">
+                            <div class="d-flex justify-content-center align-items-center why-box-icon">
                                 <i class="fa-solid fa-check fa-2x"></i>
                             </div>
                             <h5 class="pt-4 mb-2">Trusted in India</h5>
@@ -637,8 +642,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div style="--why-icon-box-clr: #17a43b;"
                             class="d-flex justify-content-start align-items-center w-100 h-100 why-box flex-column text-center">
-                            <div 
-                                class="d-flex justify-content-center align-items-center why-box-icon">
+                            <div class="d-flex justify-content-center align-items-center why-box-icon">
                                 <i class="fa-solid fa-check fa-2x"></i>
                             </div>
                             <h5 class="pt-4 mb-2">Expert Trainers</h5>
@@ -649,8 +653,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div style="--why-icon-box-clr: #f99300;"
                             class="d-flex justify-content-start align-items-center w-100 h-100 why-box flex-column text-center">
-                            <div 
-                                class="d-flex justify-content-center align-items-center why-box-icon">
+                            <div class="d-flex justify-content-center align-items-center why-box-icon">
                                 <i class="fa-solid fa-check fa-2x"></i>
                             </div>
                             <h5 class="pt-4 mb-2">Online & Offline Options</h5>
@@ -661,8 +664,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div style="--why-icon-box-clr: #fb9300;"
                             class="d-flex justify-content-start align-items-center w-100 h-100 why-box flex-column text-center">
-                            <div 
-                                class="d-flex justify-content-center align-items-center why-box-icon">
+                            <div class="d-flex justify-content-center align-items-center why-box-icon">
                                 <i class="fa-solid fa-check fa-2x"></i>
                             </div>
                             <h5 class="pt-4 mb-2">Affordable Fees</h5>
@@ -673,8 +675,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div style="--why-icon-box-clr: #2c96ec;"
                             class="d-flex justify-content-start align-items-center w-100 h-100 why-box flex-column text-center">
-                            <div 
-                                class="d-flex justify-content-center align-items-center why-box-icon">
+                            <div class="d-flex justify-content-center align-items-center why-box-icon">
                                 <i class="fa-solid fa-check fa-2x"></i>
                             </div>
                             <h5 class="pt-4 mb-2">Proven Results</h5>
@@ -686,8 +687,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div style="--why-icon-box-clr: #17a43b;"
                             class="d-flex justify-content-start align-items-center w-100 h-100 why-box flex-column text-center">
-                            <div 
-                                class="d-flex justify-content-center align-items-center why-box-icon">
+                            <div class="d-flex justify-content-center align-items-center why-box-icon">
                                 <i class="fa-solid fa-check fa-2x"></i>
                             </div>
                             <h5 class="pt-4 mb-2">High Demand Skills</h5>
@@ -740,7 +740,8 @@
                             <div class="col-12 col-md-5 col-lg-5">
                                 <div class="d-flex justify-content-center align-items-center w-100 learn-img">
                                     <img class="w-100 rounded-3"
-                                        src="https://www.playabacusindia.com/images/learn/1.jpg" alt="Abacus class and Franchises">
+                                        src="https://www.playabacusindia.com/images/learn/1.jpg"
+                                        alt="Abacus class and Franchises">
                                 </div>
                             </div>
                         </div>
@@ -766,7 +767,8 @@
                             <div class="col-12 col-md-5 col-lg-5">
                                 <div class="d-flex justify-content-center align-items-center w-100 learn-img">
                                     <img class="w-100 rounded-3"
-                                        src="https://www.playabacusindia.com/images/learn/2.jpg" alt="Abacus class and Franchises">
+                                        src="https://www.playabacusindia.com/images/learn/2.jpg"
+                                        alt="Abacus class and Franchises">
                                 </div>
                             </div>
                         </div>
@@ -1080,9 +1082,11 @@
                             Arka Kids</a>
                         <a href="../our-courses/creative-arts-india.html" class="fot-a"><i
                                 class="bi bi-chevron-right small"></i> Creative Art</a>
-                        <a href="../our-courses/phonics-star.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
+                        <a href="../our-courses/phonics-star.html" class="fot-a"><i
+                                class="bi bi-chevron-right small"></i>
                             Phonics</a>
-                        <a href="../our-courses/handwriting.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
+                        <a href="../our-courses/handwriting.html" class="fot-a"><i
+                                class="bi bi-chevron-right small"></i>
                             Handwriting</a>
                     </div>
                 </div>
@@ -1138,18 +1142,24 @@
                     </div>
                     <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon mt-2"
                         id="footer-social-section">
-                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
-                                src="../images/socialicons/facebook.svg" alt="Facebook" loading="lazy"></a>
-                        <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
-                                src="../images/socialicons/instagram.svg" alt="Instagram" loading="lazy"></a>
-                        <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="../images/socialicons/x-white.svg"
-                                alt="X" loading="lazy"></a>
-                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." title="WhatsApp"><img
-                                src="../images/socialicons/whatsapp.svg" alt="WhatsApp" loading="lazy"></a>
-                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><img
-                                src="../images/socialicons/youtube.svg" alt="YouTube" loading="lazy"></a>
-                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" title="LinkedIn"><img
-                                src="../images/socialicons/linkedin.svg" alt="LinkedIn" loading="lazy"></a>
+                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" target="_blank"
+                            rel="noopener noreferrer" title="Facebook"><img src="../images/socialicons/facebook.svg"
+                                alt="Facebook" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.instagram.com/ideal_play_abacus_india/" target="_blank"
+                            rel="noopener noreferrer" title="Instagram"><img src="../images/socialicons/instagram.svg"
+                                alt="Instagram" loading="lazy" width="30" height="30"></a>
+                        <a href="https://x.com/PlayAbacus" target="_blank" rel="noopener noreferrer"
+                            title="X (Twitter)"><img src="../images/socialicons/x-white.svg" alt="X" loading="lazy"
+                                width="30" height="30"></a>
+                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." target="_blank"
+                            rel="noopener noreferrer" title="WhatsApp"><img src="../images/socialicons/whatsapp.svg"
+                                alt="WhatsApp" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" target="_blank"
+                            rel="noopener noreferrer" title="YouTube"><img src="../images/socialicons/youtube.svg"
+                                alt="YouTube" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" target="_blank"
+                            rel="noopener noreferrer" title="LinkedIn"><img src="../images/socialicons/linkedin.svg"
+                                alt="LinkedIn" loading="lazy" width="30" height="30"></a>
                     </div>
                 </div>
             </div>
@@ -1235,7 +1245,8 @@
                         <div class="mb-3">
                             <div class="input-group">
                                 <span class="input-group-text bg-light border-end-0">
-                                    <img src="https://flagcdn.com/w20/in.png" alt="India" class="flag-icon-sm">
+                                    <img src="https://flagcdn.com/w20/in.png" alt="India" class="flag-icon-sm"
+                                        width="20" height="15" loading="lazy">
                                     <span class="ms-1 small">+91</span>
                                 </span>
                                 <input id="modal-phone" class="form-control border-start-0 ps-0"
@@ -1259,11 +1270,9 @@
 
     <!-- Back to Top Button -->
     <button id="backToTop" class="back-to-top" title="Go to top">
-        <i class="bi bi-arrow-up"></i>
+        <i class="fa-solid fa-arrow-up"></i>
     </button>
 
 </body>
 
 </html>
-
-
