--- a/our-courses/speed-arithmetic.html
+++ b/our-courses/speed-arithmetic.html
@@ -216,34 +216,33 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-xl-center flex-grow-1 pe-3 gap-0 gap-xl-3 fw-semibold">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                                <a class="nav-link" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="../about-us.html">About Us</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
+                                <a class="nav-link dropdown-toggle active" aria-current="page" href="#" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     Courses <i class="fa-solid fa-chevron-down"></i>
                                 </a>
                                 <ul class="dropdown-menu border-0 shadow-lg animate slideIn rounded-3 mt-2">
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/abacus.html">Abacus</a>
+                                    <li><a class="dropdown-item px-3 py-1" href="abacus.html">Abacus</a>
                                     </li>
-                                    <li><a class="dropdown-item px-3 py-1"
-                                            href="../our-courses/speed-arithmetic.html">Vedic Mathematics</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/arka-kids.html">Arka
+                                    <li><a class="dropdown-item px-3 py-1" href="speed-arithmetic.html">Vedic
+                                            Mathematics</a></li>
+                                    <li><a class="dropdown-item px-3 py-1" href="arka-kids.html">Arka
                                             Kids</a></li>
-                                    <li><a class="dropdown-item px-3 py-1"
-                                            href="../our-courses/creative-arts-india.html">Creative Art India</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/phonics-star.html">Phonics
+                                    <li><a class="dropdown-item px-3 py-1" href="creative-arts-india.html">Creative Art
+                                            India</a></li>
+                                    <li><a class="dropdown-item px-3 py-1" href="phonics-star.html">Phonics
                                             Star</a></li>
-                                    <li><a class="dropdown-item px-3 py-1"
-                                            href="../our-courses/handwriting.html">Handwriting</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/brite-english.html">Brite
+                                    <li><a class="dropdown-item px-3 py-1" href="handwriting.html">Handwriting</a></li>
+                                    <li><a class="dropdown-item px-3 py-1" href="brite-english.html">Brite
                                             English</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/brain-tree.html">Brain
+                                    <li><a class="dropdown-item px-3 py-1" href="brain-tree.html">Brain
                                             Tree</a></li>
-                                    <li><a class="dropdown-item px-3 py-1" href="../our-courses/my-math.html">My Math</a>
+                                    <li><a class="dropdown-item px-3 py-1" href="my-math.html">My Math</a>
                                     </li>
                                 </ul>
                             </li>
@@ -454,9 +453,9 @@
                             <h4 class="txt-primary-clr mb-4">WHY VEDIC MATHS?</h4>
                             <p>The Sutras (aphorisms) apply to and cover each and every part of each
                                 and every chapter of each and every branch of mathematics (including
-                                Arithmetic, Algebra, Geometry  plane
-                                and solid, Trigonometry  plane and spherical, Conics
-                                 geometrical and analytical, Astronomy, Calculus 
+                                Arithmetic, Algebra, Geometry plane
+                                and solid, Trigonometry plane and spherical, Conics
+                                geometrical and analytical, Astronomy, Calculus
                                 differential and integral, etc.) In fact, there is no part of mathematics, pure or
                                 applied, that is beyond their jurisdiction.</p>
                             <p>The Sutras are easy to understand, easy to apply and easy to remember,
@@ -531,10 +530,10 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="d-flex justify-content-center align-items-start flex-column w-100">
                             <h4 class="txt-primary-clr">LEVEL DETAILS</h4>
-                            <li>Duration per level  12  16 weeks.</li>
+                            <li>Duration per level 12 16 weeks.</li>
                             <li>One session per week of 2 hours.</li>
                             <li>Two sessions per week of 1 hour each.</li>
-                            <li>Students per class  12 to 15.</li>
+                            <li>Students per class 12 to 15.</li>
                             <li>Certificates are awarded on the successful completion of each level.</li>
                         </div>
                     </div>
@@ -622,17 +621,17 @@
                 <div class="d-flex align-items-start w-100 flex-column gap-3 footer-content-box">
                     <h4>Our Courses</h4>
                     <div class="d-flex align-items-start w-100 flex-column gap-3">
-                        <a href="../our-courses/abacus.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
+                        <a href="abacus.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
                             Abacus</a>
-                        <a href="../our-courses/speed-arithmetic.html" class="fot-a"><i
-                                class="bi bi-chevron-right small"></i> Vedic Maths</a>
-                        <a href="../our-courses/arka-kids.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
+                        <a href="speed-arithmetic.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Vedic
+                            Maths</a>
+                        <a href="arka-kids.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
                             Arka Kids</a>
-                        <a href="../our-courses/creative-arts-india.html" class="fot-a"><i
-                                class="bi bi-chevron-right small"></i> Creative Art</a>
-                        <a href="../our-courses/phonics-star.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
+                        <a href="creative-arts-india.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
+                            Creative Art</a>
+                        <a href="phonics-star.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
                             Phonics</a>
-                        <a href="../our-courses/handwriting.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
+                        <a href="handwriting.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
                             Handwriting</a>
                     </div>
                 </div>
@@ -688,18 +687,24 @@
                     </div>
                     <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon mt-2"
                         id="footer-social-section">
-                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
-                                src="../images/socialicons/facebook.svg" alt="Facebook" loading="lazy"></a>
-                        <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
-                                src="../images/socialicons/instagram.svg" alt="Instagram" loading="lazy"></a>
-                        <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="../images/socialicons/x-white.svg"
-                                alt="X" loading="lazy"></a>
-                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." title="WhatsApp"><img
-                                src="../images/socialicons/whatsapp.svg" alt="WhatsApp" loading="lazy"></a>
-                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><img
-                                src="../images/socialicons/youtube.svg" alt="YouTube" loading="lazy"></a>
-                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" title="LinkedIn"><img
-                                src="../images/socialicons/linkedin.svg" alt="LinkedIn" loading="lazy"></a>
+                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" target="_blank"
+                            rel="noopener noreferrer" title="Facebook"><img src="../images/socialicons/facebook.svg"
+                                alt="Facebook" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.instagram.com/ideal_play_abacus_india/" target="_blank"
+                            rel="noopener noreferrer" title="Instagram"><img src="../images/socialicons/instagram.svg"
+                                alt="Instagram" loading="lazy" width="30" height="30"></a>
+                        <a href="https://x.com/PlayAbacus" target="_blank" rel="noopener noreferrer"
+                            title="X (Twitter)"><img src="../images/socialicons/x-white.svg" alt="X" loading="lazy"
+                                width="30" height="30"></a>
+                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." target="_blank"
+                            rel="noopener noreferrer" title="WhatsApp"><img src="../images/socialicons/whatsapp.svg"
+                                alt="WhatsApp" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" target="_blank"
+                            rel="noopener noreferrer" title="YouTube"><img src="../images/socialicons/youtube.svg"
+                                alt="YouTube" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" target="_blank"
+                            rel="noopener noreferrer" title="LinkedIn"><img src="../images/socialicons/linkedin.svg"
+                                alt="LinkedIn" loading="lazy" width="30" height="30"></a>
                     </div>
                 </div>
             </div>
@@ -785,7 +790,8 @@
                         <div class="mb-3">
                             <div class="input-group">
                                 <span class="input-group-text bg-light border-end-0">
-                                    <img src="https://flagcdn.com/w20/in.png" alt="India" class="flag-icon-sm">
+                                    <img src="https://flagcdn.com/w20/in.png" alt="India" class="flag-icon-sm"
+                                        width="20" height="15" loading="lazy">
                                     <span class="ms-1 small">+91</span>
                                 </span>
                                 <input id="modal-phone" class="form-control border-start-0 ps-0"
@@ -809,11 +815,9 @@
 
     <!-- Back to Top Button -->
     <button id="backToTop" class="back-to-top" title="Go to top">
-        <i class="bi bi-arrow-up"></i>
+        <i class="fa-solid fa-arrow-up"></i>
     </button>
 
 </body>
 
 </html>
-
-
