--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
                             </div>
                             <div class="col-12 col-md-5 col-lg-5">
                                 <div class="d-flex justify-content-center align-items-center w-100 learn-img">
-                                    <img class="w-100 rounded-3" src="./images/home/become a partner.JPG"
+                                    <img class="w-100 rounded-3" src="./images/home/become a partner.webp"
                                         alt="Become a Partner - Abacus Franchise" loading="lazy" width="300"
                                         height="200">
                                 </div>
@@ -958,7 +958,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div
                             class="d-flex justify-content-start align-items-start flex-column w-100 h-100 competition-main-box">
-                            <img class="w-100" src="./images/home/withcm.jpg"
+                            <img class="w-100" src="./images/home/withcm.webp"
                                 alt="Ideal Play Abacus International Level Competition" loading="lazy" width="400"
                                 height="300">
                             <div class="competition-box p-3">
@@ -980,8 +980,8 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div
                             class="d-flex justify-content-start align-items-start flex-column w-100 h-100 competition-main-box featured-event">
-                            <img class="w-100" src="./images/home/nlc.jpg" alt="National Level Abacus Competition India"
-                                loading="lazy" width="400" height="300">
+                            <img class="w-100" src="./images/home/nlc.webp"
+                                alt="National Level Abacus Competition India" loading="lazy" width="400" height="300">
                             <div class="competition-box p-3">
                                 <h6>21ST NATIONAL LEVEL ABACUS & MENTAL ARITHMETIC ONLINE COMPETITION - 2026</h6>
                                 <hr class="border border-warning border-1 opacity-100">
